--- a/app/src/main/res/menu/main_video.xml
+++ b/app/src/main/res/menu/main_video.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_adding"
-        android:orderInCategory="100"
-        android:title="@string/add_question"
-        app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/id_video_adding"
+        android:orderInCategory="100"
+        android:title="添加视频"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/id_video_sharing"
+        android:orderInCategory="100"
+        android:title="分享"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/id_video_setting"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
