update with modifying some functions

--- a/app/src/main/res/menu/main_friend.xml
+++ b/app/src/main/res/menu/main_friend.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/chatting_adding_friends"
+        android:orderInCategory="100"
+        android:title="@string/add_friend"
+        app:showAsAction="never" />
 
     <item
-        android:id="@+id/id_friend_adding"
+        android:id="@+id/chatting_adding_class"
         android:orderInCategory="100"
-        android:title="添加联系人"
+        android:title="@string/add_class"
         app:showAsAction="never" />
-    <!--<item-->
-        <!--android:id="@+id/id_friend_sharing"-->
-        <!--android:orderInCategory="100"-->
-        <!--android:title="分享"-->
-        <!--app:showAsAction="never" />-->
     <item
-        android:id="@+id/id_friend_setting"
+        android:id="@+id/chatting_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
