--- a/app/src/main/res/layout/cardview02.xml
+++ b/app/src/main/res/layout/cardview02.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="2dp"
     android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginRight="0dp"
     android:layout_marginTop="2dp"
     app:cardCornerRadius="5dp"
     android:elevation="1dp"
@@ -14,19 +14,25 @@
     <LinearLayout
         android:id="@+id/base_swipe_item_container2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="160dp"
         android:orientation="vertical"
         android:padding="5dp"
         >
         <TextView
             android:id="@+id/base_swipe_item_title2"
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:gravity="left|center_vertical"
-            android:textSize="21sp"
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:textSize="16sp"
+            android:text="shioin1"
+            android:textColor="@color/black"
+            android:paddingLeft="10dp"
             />
-
+        <ImageView
+            android:id="@+id/id_video_iamge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
