--- a/app/src/main/res/layout/cardview03.xml
+++ b/app/src/main/res/layout/cardview03.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="82dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="2dp"
+    android:layout_marginBottom="0dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="2dp"
@@ -26,13 +26,47 @@
             android:scaleType="fitCenter"
 
             />
-        <TextView
-            android:id="@+id/base_swipe_item_title3"
-            android:layout_width="fill_parent"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:textSize="21sp"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="bottom"
+                android:paddingTop="10dp"
+                >
+                <TextView
+                    android:id="@+id/base_swipe_item_title3"
+                    android:layout_width="match_parent"
+                    android:layout_height="21dp"
+                    android:layout_weight="1"
+                    android:text="姜毅行"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="18sp"
+                    />
+                <TextView
+                    android:id="@+id/id_friend_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="11:11"
+                    android:paddingBottom="0dp"
+                    />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/id_friend_content"
+                android:paddingTop="15dp"
+                android:paddingLeft="2dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="在么，大哥哥"
+
+                />
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
