--- a/app/src/main/res/layout/setting_personalizesignature.xml
+++ b/app/src/main/res/layout/setting_personalizesignature.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="this is a personalize signature"
-
+            android:id="@+id/id_setting_personalizesignature_text"
             />
 
     </android.support.v7.widget.CardView>
