--- a/app/src/main/res/layout/vedio_main.xml
+++ b/app/src/main/res/layout/vedio_main.xml
@@ -25,7 +25,9 @@
                 android:layout_height="match_parent"
                 />
         </io.vov.vitamio.widget.CenterLayout>
-
+        <include layout="@layout/toast_brightness" />
+        <include layout="@layout/toast_volume" />
+        <include layout="@layout/toast_ff"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
