--- a/app/src/main/res/layout/setting_personal_introduction.xml
+++ b/app/src/main/res/layout/setting_personal_introduction.xml
@@ -4,27 +4,22 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:cardBackgroundColor="#02bcd4"
-        app:cardCornerRadius="10dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-
-
+    <!-- 全圆角-->
+    <LinearLayout style="@style/wrap_layout"
+        android:layout_height="200dp"
         >
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="this is a personalize introduction"
-            android:id="@+id/id_setting_personal_introduction_text"
-            />
+        <LinearLayout style="@style/single_layout">
 
-    </android.support.v7.widget.CardView>
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/editText6"
+                android:maxLength="1000"
+                android:background="@null"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
