update with uoload image(not finished)

--- a/app/src/main/res/layout/setting_personalizesignature.xml
+++ b/app/src/main/res/layout/setting_personalizesignature.xml
@@ -15,6 +15,7 @@
                 android:text=""
                 android:maxLength="30"
                 android:background="@null"
+                android:id="@+id/id_setting_textview"
 
                 />
         </LinearLayout>
