--- a/app/src/main/res/layout/setting_personal_introduction.xml
+++ b/app/src/main/res/layout/setting_personal_introduction.xml
@@ -15,7 +15,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:ems="10"
-                android:id="@+id/editText6"
+                android:id="@+id/editText_introduction"
                 android:maxLength="1000"
                 android:background="@null"
                 android:layout_weight="1" />
