--- a/app/src/main/res/layout/addquestionfragment.xml
+++ b/app/src/main/res/layout/addquestionfragment.xml
@@ -11,15 +11,27 @@
     <EditText
         android:id="@+id/id_EditText_AddQuestion"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="100dp"
         android:hint="请输入问题"
         android:gravity="top"
 
         />
 
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="问题内容"
+        android:gravity="top"
+        android:inputType="textMultiLine"
+        android:id="@+id/id_add_question_content"
+        />
+
     <Button
         android:id="@+id/id_Button_submit_question"
+
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
