--- a/app/src/main/res/layout/item_recycler_dicover.xml
+++ b/app/src/main/res/layout/item_recycler_dicover.xml
@@ -29,7 +29,7 @@
             android:layout_marginRight="20dp"
             app:maxCollapsedLines="4">
             <TextView
-                android:id="@id/id_question_content_text"
+                android:id="@id/expandable_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -39,7 +39,7 @@
                 android:textColor="#666666" />
 
             <ImageButton
-                android:id="@+id/id_question_content_imageview"
+                android:id="@+id/expand_collapse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
