--- a/app/src/main/res/layout/ques_content.xml
+++ b/app/src/main/res/layout/ques_content.xml
@@ -4,18 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/White">
-    <TextView
-        android:id="@+id/id_question_content_title"
+    <!--<TextView-->
+        <!--android:id="@+id/id_question_content_title"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1"-->
+        <!--android:text="这是标题"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:id="@+id/id_question_content_content"-->
+        <!--android:text="这是内容"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1"/>-->
+    <include layout="@layout/item_recycler_dicover" />
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="这是标题"
-        />
-    <TextView
-        android:id="@+id/id_question_content_content"
-        android:text="这是内容"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 
 </LinearLayout>
