--- a/app/src/main/res/layout/setting_personal_introduction.xml
+++ b/app/src/main/res/layout/setting_personal_introduction.xml
@@ -8,18 +8,18 @@
     <LinearLayout style="@style/wrap_layout"
         android:layout_height="200dp"
         >
-        <LinearLayout style="@style/single_layout">
+
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:inputType="textMultiLine"
                 android:ems="10"
                 android:id="@+id/editText_introduction"
                 android:maxLength="1000"
                 android:background="@null"
                 android:layout_weight="1" />
-        </LinearLayout>
+
 
     </LinearLayout>
 </LinearLayout>
