--- a/app/src/main/res/layout/cardview_video_management.xml
+++ b/app/src/main/res/layout/cardview_video_management.xml
@@ -52,18 +52,26 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="right"
                 >
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/progressBar3"
+                    android:layout_weight="1" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/id_vedio_management_size"
                     android:text="大小: 100M"
                     android:paddingRight="5dp"
-
+                    android:paddingLeft="10dp"
                     />
 
 
