--- a/app/src/main/res/menu/main_video.xml
+++ b/app/src/main/res/menu/main_video.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/id_video_management"
         android:orderInCategory="100"
-        android:title="视频缓存"
+        android:title="上传视频管理"
         app:showAsAction="never" />
 
     <item
