--- a/app/src/main/res/layout/cardview02.xml
+++ b/app/src/main/res/layout/cardview02.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:id="@+id/base_swipe_item_container2"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="170dp"
         android:orientation="vertical"
         android:padding="5dp"
         >
@@ -33,6 +33,25 @@
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:layout_weight="1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="播放量: "
+                android:textSize="12sp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="12sp"
+                />
+        </LinearLayout>
+
 
     </LinearLayout>
 
