--- a/app/src/main/res/layout/item_recycler_answer.xml
+++ b/app/src/main/res/layout/item_recycler_answer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    android:layout_marginTop="10dp"
+                                    android:layout_marginTop="7dp"
                                     android:orientation="vertical"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
@@ -10,18 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical">
             <ImageView
+                android:scaleType="fitCenter"
+                android:maxHeight="30dp"
+
                 android:id="@+id/iv_answer_image"
                 android:src="@drawable/ic_account_circle_blue_600_24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
             <TextView
                 android:id="@+id/tv_answer_name"
                 android:textColor="@android:color/black"
@@ -46,15 +49,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
-            <TextView
-                android:layout_centerVertical="true"
-                android:id="@+id/tv_agree"
-                android:text="1人赞同"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginLeft="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:layout_marginBottom="5dp">
+
             <TextView
                 android:layout_centerVertical="true"
                 android:id="@+id/tv_time"
@@ -62,20 +58,34 @@
                 android:text="time"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_alignBottom="@id/tv_agree"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
             <ImageButton
                 android:id="@+id/ib_agree"
-                android:layout_marginRight="20dp"
-                android:layout_toLeftOf="@id/tv_time"
-                android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_thumb_up_grey_700_24dp"/>
+                android:src="@drawable/ic_thumb_up_grey_700_24dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginStart="13dp"
+                android:layout_alignTop="@+id/tv_agree"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/tv_agree"
+                android:text="1人赞同"
+                android:textColor="@android:color/darker_gray"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/ib_agree"
+                android:layout_toEndOf="@+id/ib_agree" />
         </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
