--- a/app/src/main/res/layout/item_recycler_query_result.xml
+++ b/app/src/main/res/layout/item_recycler_query_result.xml
@@ -14,6 +14,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingRight="5dp"
+        android:background="@color/White"
         >
 
         <ImageView
