--- a/app/src/main/res/menu/main_friend.xml
+++ b/app/src/main/res/menu/main_friend.xml
@@ -2,21 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/chatting_adding_friends"
+        android:id="@+id/action_my_contact"
         android:orderInCategory="100"
-        android:title="@string/add_friend"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/chatting_adding_class"
-        android:orderInCategory="100"
-        android:title="@string/add_class"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_action_action_search"
-        android:orderInCategory="100"
-        android:title="@string/abc_search_hint"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:title="联系人"
+        android:icon="@drawable/ic_perm_contact_calendar_white_24dp" />
 </menu>
