--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -37,24 +37,24 @@
         android:orientation="horizontal"
         >
         <TextView
-        android:text="@string/login_name"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
+            android:text="旧密码"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
             android:layout_marginRight="30dp"
-        android:id="@+id/textView2"
+            android:id="@+id/textView2"
 
-        />
+            />
         <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText2"
-        android:hint="@string/login_defualt"
-        />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/et_old_password"
+            android:hint="请输入旧密码"
+            />
 
     </LinearLayout>
 
@@ -70,7 +70,7 @@
         >
 
         <TextView
-            android:text="@string/login_password"
+            android:text="新密码"
             android:textSize="18sp"
 
             android:textColor="@color/black"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
             android:layout_marginLeft="60dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginRight="30dp"
 
 
             />
@@ -89,8 +89,8 @@
             android:inputType="textPassword"
             android:ems="10"
 
-            android:id="@+id/editText"
-            android:hint="@string/login_defualt2"
+            android:id="@+id/et_new_password"
+            android:hint="请输入新密码"
             />
 
     </LinearLayout>
@@ -106,7 +106,7 @@
 
 
         <Button
-            android:text="@string/login"
+            android:text="确认"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -114,26 +114,9 @@
 
 
             android:textColor="@color/White"
-            android:id="@+id/button2" />
+            android:id="@+id/bt_confirm_password" />
 
     </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
-    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_register"
-        android:text="@string/register"
-        android:textColor="@color/black"
-        android:paddingLeft="15dp"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:paddingRight="15dp"
-        />
-</LinearLayout>
 
 </LinearLayout>
