--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,10 +25,12 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="江一航"
+        android:id="@+id/id_tv_main_nickname"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/id_main_signature"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="重新发现世界" />
